# zephyr_cyw555xx_wifi

./: CMakeLists.txt  Kconfig  README.rst  prj.conf
boards/: nucleo_h753zi.conf  nucleo_h755zi_q_stm32h755xx_m7.conf  nucleo_h755zi_q_stm32h755xx_m7.overlay
boards/shields/ezurio_m2_nucleo_144_adapter/: ezurio_m2_nucleo_144_adapter.overlay
src/: wifi_test.c
